--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "clean": "rm -f dist/*",
     "autoprefixer": "postcss -u autoprefixer -r dist/*",
     "lint": "eslint src/*.js",
-    "uglify": "mkdir -p dist/js && uglifyjs src/*.js -m -o dist/app.js && uglifyjs src/*.js -m -c -o dist/app.min.js",
+    "uglify": "uglifyjs src/*.js -m -o dist/app.js && uglifyjs src/*.js -m -c -o dist/app.min.js",
     "serve": "browser-sync start --server --files \"dist/*.css, dist/*.js, **/*.html, !node_modules/**/*.html\"",
     "data": "cp src/*.json dist/",
-    "build:css": "npm run autoprefixer",
+    "build:css": "cp src/*.css dist/ && npm run autoprefixer",
     "build:js": "npm run lint && npm run uglify",
-    "build:all": "mkdir dist/ && npm run build:css && npm run build:js && npm run data",
+    "build:all": "mkdir -p dist/ && npm run build:css && npm run build:js && npm run data",
     "watch:css": "onchange \"src/*.css\" -- npm run build:css",
     "watch:js": "onchange \"src/*.js\" -- npm run build:js",
     "watch:data": "onchange \"src/*.json\" -- npm run data",
