integrate emoticon build system and fiddle with stuff

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "clean": "rm -f dist/*",
     "autoprefixer": "postcss -u autoprefixer -r dist/*.css",
     "serve": "browser-sync start --server --files \"dist/*.css, **/*.html, !node_modules/**/*.html\"",
-    "build:css": "cp src/*.css dist/ && npm run autoprefixer",
-    "build:all": "mkdir -p dist/ && npm run build:css",
     "watch:css": "onchange \"src/*.css\" -- npm run build:css",
-    "watch:all": "npm-run-all -p serve watch:css",
-    "build": "node build.js",
-    "dev": "node --inspect --debug-brk build.js"
+    "watch:emoticons": "onchange \"src/emoticons.json\" -- npm run build:emoticons",
+    "watch:all": "npm-run-all -p serve watch:css watch:emoticons",
+    "build:css": "cp src/*.css dist/ && npm run autoprefixer",
+    "build:emoticons": "node build.js",
+    "build:all": "mkdir -p dist/ && npm run build:css && npm run build:emoticons",
+    "build:dev": "onchange \"build.js\" -- node --inspect --debug-brk build.js"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
